Finished the basic structure of the homepage

--- a/src/theme.postcss
+++ b/src/theme.postcss
@@ -16,39 +16,39 @@
 	--on-error: 255 255 255;
 	--on-surface: 255 255 255;
 	/* =~= Theme Colors  =~= */
-	/* primary | #f5e10a */
-	--color-primary-50: 254 251 218; /* ⬅ #fefbda */
-	--color-primary-100: 253 249 206; /* ⬅ #fdf9ce */
-	--color-primary-200: 253 248 194; /* ⬅ #fdf8c2 */
-	--color-primary-300: 251 243 157; /* ⬅ #fbf39d */
-	--color-primary-400: 248 234 84; /* ⬅ #f8ea54 */
-	--color-primary-500: 245 225 10; /* ⬅ #f5e10a */
-	--color-primary-600: 221 203 9; /* ⬅ #ddcb09 */
-	--color-primary-700: 184 169 8; /* ⬅ #b8a908 */
-	--color-primary-800: 147 135 6; /* ⬅ #938706 */
-	--color-primary-900: 120 110 5; /* ⬅ #786e05 */
-	/* secondary | #4F46E5 */
-	--color-secondary-50: 229 227 251; /* ⬅ #e5e3fb */
-	--color-secondary-100: 220 218 250; /* ⬅ #dcdafa */
-	--color-secondary-200: 211 209 249; /* ⬅ #d3d1f9 */
-	--color-secondary-300: 185 181 245; /* ⬅ #b9b5f5 */
-	--color-secondary-400: 132 126 237; /* ⬅ #847eed */
-	--color-secondary-500: 79 70 229; /* ⬅ #4F46E5 */
-	--color-secondary-600: 71 63 206; /* ⬅ #473fce */
-	--color-secondary-700: 59 53 172; /* ⬅ #3b35ac */
-	--color-secondary-800: 47 42 137; /* ⬅ #2f2a89 */
-	--color-secondary-900: 39 34 112; /* ⬅ #272270 */
-	/* tertiary | #0EA5E9 */
-	--color-tertiary-50: 219 242 252; /* ⬅ #dbf2fc */
-	--color-tertiary-100: 207 237 251; /* ⬅ #cfedfb */
-	--color-tertiary-200: 195 233 250; /* ⬅ #c3e9fa */
-	--color-tertiary-300: 159 219 246; /* ⬅ #9fdbf6 */
-	--color-tertiary-400: 86 192 240; /* ⬅ #56c0f0 */
-	--color-tertiary-500: 14 165 233; /* ⬅ #0EA5E9 */
-	--color-tertiary-600: 13 149 210; /* ⬅ #0d95d2 */
-	--color-tertiary-700: 11 124 175; /* ⬅ #0b7caf */
-	--color-tertiary-800: 8 99 140; /* ⬅ #08638c */
-	--color-tertiary-900: 7 81 114; /* ⬅ #075172 */
+	/* primary | #1997d7 */
+	--color-primary-50: 221 239 249; /* ⬅ #ddeff9 */
+	--color-primary-100: 209 234 247; /* ⬅ #d1eaf7 */
+	--color-primary-200: 198 229 245; /* ⬅ #c6e5f5 */
+	--color-primary-300: 163 213 239; /* ⬅ #a3d5ef */
+	--color-primary-400: 94 182 227; /* ⬅ #5eb6e3 */
+	--color-primary-500: 25 151 215; /* ⬅ #1997d7 */
+	--color-primary-600: 23 136 194; /* ⬅ #1788c2 */
+	--color-primary-700: 19 113 161; /* ⬅ #1371a1 */
+	--color-primary-800: 15 91 129; /* ⬅ #0f5b81 */
+	--color-primary-900: 12 74 105; /* ⬅ #0c4a69 */
+	/* secondary | #ccc614 */
+	--color-secondary-50: 247 246 220; /* ⬅ #f7f6dc */
+	--color-secondary-100: 245 244 208; /* ⬅ #f5f4d0 */
+	--color-secondary-200: 242 241 196; /* ⬅ #f2f1c4 */
+	--color-secondary-300: 235 232 161; /* ⬅ #ebe8a1 */
+	--color-secondary-400: 219 215 91; /* ⬅ #dbd75b */
+	--color-secondary-500: 204 198 20; /* ⬅ #ccc614 */
+	--color-secondary-600: 184 178 18; /* ⬅ #b8b212 */
+	--color-secondary-700: 153 149 15; /* ⬅ #99950f */
+	--color-secondary-800: 122 119 12; /* ⬅ #7a770c */
+	--color-secondary-900: 100 97 10; /* ⬅ #64610a */
+	/* tertiary | #5559d3 */
+	--color-tertiary-50: 230 230 248; /* ⬅ #e6e6f8 */
+	--color-tertiary-100: 221 222 246; /* ⬅ #dddef6 */
+	--color-tertiary-200: 213 214 244; /* ⬅ #d5d6f4 */
+	--color-tertiary-300: 187 189 237; /* ⬅ #bbbded */
+	--color-tertiary-400: 136 139 224; /* ⬅ #888be0 */
+	--color-tertiary-500: 85 89 211; /* ⬅ #5559d3 */
+	--color-tertiary-600: 77 80 190; /* ⬅ #4d50be */
+	--color-tertiary-700: 64 67 158; /* ⬅ #40439e */
+	--color-tertiary-800: 51 53 127; /* ⬅ #33357f */
+	--color-tertiary-900: 42 44 103; /* ⬅ #2a2c67 */
 	/* success | #84cc16 */
 	--color-success-50: 237 247 220; /* ⬅ #edf7dc */
 	--color-success-100: 230 245 208; /* ⬅ #e6f5d0 */
@@ -82,15 +82,15 @@
 	--color-error-700: 159 19 89; /* ⬅ #9f1359 */
 	--color-error-800: 127 15 71; /* ⬅ #7f0f47 */
 	--color-error-900: 104 12 58; /* ⬅ #680c3a */
-	/* surface | #535455 */
-	--color-surface-50: 229 229 230; /* ⬅ #e5e5e6 */
-	--color-surface-100: 221 221 221; /* ⬅ #dddddd */
-	--color-surface-200: 212 212 213; /* ⬅ #d4d4d5 */
-	--color-surface-300: 186 187 187; /* ⬅ #babbbb */
-	--color-surface-400: 135 135 136; /* ⬅ #878788 */
-	--color-surface-500: 83 84 85; /* ⬅ #535455 */
-	--color-surface-600: 75 76 77; /* ⬅ #4b4c4d */
-	--color-surface-700: 62 63 64; /* ⬅ #3e3f40 */
-	--color-surface-800: 50 50 51; /* ⬅ #323233 */
-	--color-surface-900: 41 41 42; /* ⬅ #29292a */
+	/* surface | #2f3032 */
+	--color-surface-50: 224 224 224; /* ⬅ #e0e0e0 */
+	--color-surface-100: 213 214 214; /* ⬅ #d5d6d6 */
+	--color-surface-200: 203 203 204; /* ⬅ #cbcbcc */
+	--color-surface-300: 172 172 173; /* ⬅ #acacad */
+	--color-surface-400: 109 110 112; /* ⬅ #6d6e70 */
+	--color-surface-500: 47 48 50; /* ⬅ #2f3032 */
+	--color-surface-600: 42 43 45; /* ⬅ #2a2b2d */
+	--color-surface-700: 35 36 38; /* ⬅ #232426 */
+	--color-surface-800: 28 29 30; /* ⬅ #1c1d1e */
+	--color-surface-900: 23 24 25; /* ⬅ #171819 */
 }
